# lbxd

./: .gitignore  .gitmodules  .readthedocs.yaml  AGENTS.md  CHANGELOG.md  CHANGES.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  INSTALLATION.md  LICENSE  README.md  RELEASE_NOTES.md  SECURITY.md  install.ps1  install.sh
.claude/agents/: lbxd-sync-validator.md
.cursor/commands/: add-api-client.md  add-command.md  build.md  debug.md  explain.md  fix-errors.md  lint.md  release.md  review-code.md  test.md
.cursor/rules/: api-clients.mdc  commits-releases.mdc  project-context.mdc  rust-safety.mdc  testing.mdc  tui-development.mdc
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml  security.yml  update-packages.yml
Formula/: lbxd.rb
chocolatey/: lbxd.nuspec
chocolatey/tools/: chocolateyinstall.ps1
debian/: control
docs/: api-keys.md  conf.py  configuration.md  index.md  installation.md  migration.md  releasing.md  requirements.txt  usage.md
docs/_static/: .gitkeep
docs/api/: index.md
examples/: api-key-demo.sh
src/: batch_loader.rs  lib.rs  main.rs
src/ascii/: mod.rs
src/cache/: mod.rs
src/cli/: mod.rs
src/config/: mod.rs
src/display/: mod.rs  mod_old.rs
src/export/: mod.rs
src/feed/: mod.rs
src/letterboxd_client/: mod.rs
src/letterboxd_client_rust/: mod.rs
src/models/: mod.rs
src/omdb/: mod.rs
src/onboarding/: mod.rs
src/profile/: mod.rs
src/python/: ascii_converter.py  utils.py
src/tmdb/: mod.rs
src/tui/: app.rs  grid.rs  mod.rs  progress.rs  styles.rs
src/viu/: mod.rs
winget/: lbxd.yaml
