[package]
name = "lbxd"
version = "2.1.1"
edition = "2021"
description = "A beautiful command-line tool for Letterboxd"
homepage = "https://github.com/Pranav-Karra-3301/lbxd"
repository = "https://github.com/Pranav-Karra-3301/lbxd"
license = "MIT"
keywords = ["letterboxd", "cli", "movies", "rss", "terminal"]
categories = ["command-line-utilities"]

[dependencies]
clap = { version = "4.5", features = ["derive"] }
tokio = { version = "1.0", features = ["full", "sync"] }
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
feed-rs = "2.1"
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0"
colored = "2.0"
regex = "1.10"
dirs = "5.0"
tempfile = "3.0"
tokio-util = "0.7"
terminal_size = "0.3"
urlencoding = "2.1"
ratatui = "0.24"
crossterm = "0.28"

[dev-dependencies]
tokio-test = "0.4"
